--- a/Registration.html
+++ b/Registration.html
@@ -49,6 +49,9 @@
     <label for="other">other</label>
     <input type="text" name="" id="other">
     <br><br>
+    <label for="file">Choose file :</label>
+    <input type="file" name="file" id="file"><br><br>
+    <button type="submit">Upload</button>
 
 </body>
 </html>
