--- a/form.html
+++ b/form.html
@@ -7,18 +7,18 @@
 </head>
 <body>
     <form >
-        <label for="name">username</label>
+        <label for="name" style="border: 2px solid orange;">username</label>
         <input type="text" id="name"  placeholder="username">
         <br><br>
-        <label for="password">password</label>
+        <label ="password" style="border: 2px solid orange;">password</label>
         <input type="password" id="password" placeholder="password">
         <br><br>
-        <label for="description">write something</label>
+        <label for="description" style="border: 2px solid orange;">write something</label>
         <textarea name="write something" id="description" placeholder="description"></textarea>
         <br><br>
-        <label for="list">check</label>
+        <label for="list" style="border: 2px solid orange;">check</label>
         <input type="checkbox" name="list" id="list">
-        <button>Submit</button>
+        <button style="border: 2px solid orange;">Submit</button>
     </form>
 </body>
 </html>
