--- a/navbar.html
+++ b/navbar.html
@@ -5,6 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="navbar.css">
+    <style> ls:hover{background-color: pink;}
+        a:visited{
+            color:red;
+        }
+        a:link{
+            color: pink;
+        }
+    </style>
 </head>
 <body>
     <nav style="text-align: center;"> Contact:
@@ -15,5 +23,6 @@
     <br><br>
     <ls><a href="Registration.html">Registration Form</a></ls>
     </nav>
+    <a href="https://gemini.google.com/app/75ea4563e7414050?utm_source=chrome_omnibox&utm_medium=owned&utm_campaign=gemini_shortcut">google</a>
 </body>
 </html>
